--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
           </li>
         </ul>
         <div class="footer__socials">
-          <a href="www.factbook.com/impacthomedesign"><i class="ri-facebook-line"></i></a>
-          <a href="www.instagram.com/impacthomedesign"><i class="ri-instagram-line"></i></a>
-          <a href="https://ca.linkedin.com/in/taylor-simpson-bisson-1843181a1"><i class="ri-linkedin-line"></i></a>
+          <a href="a href="index.html"><i class="ri-facebook-line"></i></a>
+          <a href="a href="index.html"><i class="ri-instagram-line"></i></a>
+          <a href="a href="index.html"><i class="ri-linkedin-line"></i></a>
         </div>
       </div>
     </div>
@@ -551,4 +551,5 @@
 </body>
 
 </html>
+
 
