--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <div class="nav__header">
       <div class="nav__logo">
-        <a href="index.html"><img src="assets/logo.png" alt="CustomHomeDesign"
+        <a href="index.html"><img src="" alt="CustomHomeDesign"
             class="logo" /></a><!-- Does any of this need to be named ImpactHomeDesign or CustomHomeDesign for SEO Like Image Name? -->
       </div>
 
@@ -35,7 +35,7 @@
       </div>
       <div class="nav__menu__number">
         <span class="divider"></span>
-        <a href="tel:+1 250 915 7965"><i>250-915-7965</i></a>
+        <a href="tel:+1 250 915 7965"><i></i></a>
       </div>
     </div>
   </nav>
@@ -521,26 +521,25 @@
         <h4>Contact Us</h4>
         <ul>
           <li>
-            <i class="ri-phone-line"></i><a href="tel:250-915-7965">250-915-7965</a>
+            <i class="ri-phone-line"></i><a href="index.html">phone</a>
           </li>
           <li>
-            <i class="ri-mail-line"></i><a href="mailto:info@impacthomedesign.ca">info@impacthomedesign.ca</a>
+            <i class="ri-mail-line"></i><a href="index.html">website</a>
           </li>
           <li>
             <i class="ri-survey-line"></i><a href="index.html">Contact Form</a>
           </li>
         </ul>
         <div class="footer__socials">
-          <a href="a href="index.html"><i class="ri-facebook-line"></i></a>
-          <a href="a href="index.html"><i class="ri-instagram-line"></i></a>
-          <a href="a href="index.html"><i class="ri-linkedin-line"></i></a>
+          <a href="index.html"><i class="ri-facebook-line"></i></a>
+          <a href="index.html"><i class="ri-instagram-line"></i></a>
+          <a href="index.html"><i class="ri-linkedin-line"></i></a>
         </div>
       </div>
     </div>
     <div class="section__container footer__socket">
       <h5>
-        Copyright © 2026 - Impact Design LTD. - All Rights Reserved.
-        <span class="break">Website By: Taylor Simpson-Bisson</span>
+        Copyright © 2026 - </span>
       </h5>
     </div>
   </footer>
@@ -551,5 +550,6 @@
 </body>
 
 </html>
+
 
 
