--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="DesignDevelopment.png" alt="" />
+            <img src="assets/DesignDevelopment.png" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>3.</span> Design Development</h3>
@@ -143,7 +143,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="ConstructionDocuments.png" alt="" />
+            <img src="assets/ConstructionDocuments.png" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>4.</span> Construction Documents</h3>
@@ -550,6 +550,7 @@
 </body>
 
 </html>
+
 
 
 
