--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="assets/PlanningPreDesign.png" alt="" />
+            <img src="assets/PlanningPreDesign.jpg" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>1.</span> Planning & Pre-Design</h3>
@@ -95,7 +95,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="assets/SchematicDesign.png" alt="" />
+            <img src="assets/SchematicDesign.jpg" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>2.</span> Schematic Design</h3>
@@ -117,7 +117,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="assets/DesignDevelopment.png" alt="" />
+            <img src="assets/DesignDevelopment.jpg" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>3.</span> Design Development</h3>
@@ -143,7 +143,7 @@
 
         <div class="process__page__section" id="customhomes">
           <div class="process__page__img">
-            <img src="assets/ConstructionDocuments.png" alt="" />
+            <img src="assets/ConstructionDocuments.jpg" alt="" />
           </div>
           <div class="process__page__title">
             <h3><span>4.</span> Construction Documents</h3>
@@ -550,6 +550,7 @@
 </body>
 
 </html>
+
 
 
 
