--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Custom Home Designers in Victoria BC - Impact Home Design</title>
+    <title></title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
         <div class="nav__logo">
           <a href="index.html"
             ><img
-              src="assets/logo.png"
+              src=""
               alt="CustomHomeDesign"
               class="logo" /></a
           ><!-- Does any of this need to be named ImpactHomeDesign or CustomHomeDesign for SEO Like Image Name? -->
@@ -44,7 +44,7 @@
         </div>
         <div class="nav__menu__number">
           <span class="divider"></span>
-          <a href="tel:+1 250 915 7965"><i>250-915-7965</i></a>
+          <a href=""><i></i></a>
         </div>
       </div>
     </nav>
@@ -394,10 +394,9 @@
     <footer>
       <div class="section__container footer__grid">
         <div class="footer__description">
-          <h4>Impact Home Design</h4>
+          <h4></h4>
           <p>
-            Providing high quality house plans in Victoria BC, Vancouver Island
-            & surrounding areas.
+           
           </p>
         </div>
         <div class="footer__links">
@@ -416,12 +415,12 @@
           <ul>
             <li>
               <i class="ri-phone-line"></i
-              ><a href="tel:250-915-7965">250-915-7965</a>
+              ><a href="tel:"></a>
             </li>
             <li>
               <i class="ri-mail-line"></i
               ><a href="mailto:info@impacthomedesign.ca"
-                >info@impacthomedesign.ca</a
+                ></a
               >
             </li>
             <li>
@@ -430,13 +429,13 @@
             </li>
           </ul>
           <div class="footer__socials">
-            <a href="www.factbook.com/impacthomedesign"
+            <a href=""
               ><i class="ri-facebook-line"></i
             ></a>
-            <a href="www.instagram.com/impacthomedesign"
+            <a href=""
               ><i class="ri-instagram-line"></i
             ></a>
-            <a href="https://ca.linkedin.com/in/taylor-simpson-bisson-1843181a1"
+            <a href=""
               ><i class="ri-linkedin-line"></i
             ></a>
           </div>
@@ -444,8 +443,8 @@
       </div>
       <div class="section__container footer__socket">
         <h5>
-          Copyright © 2026 - Impact Design LTD. - All Rights Reserved.
-          <span class="break">Website By: Taylor Simpson-Bisson</span>
+          
+          <span class="break"></span>
         </h5>
       </div>
     </footer>
@@ -455,3 +454,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
